--- a/crypto-config.yaml
+++ b/crypto-config.yaml
@@ -2,10 +2,10 @@ OrdererOrgs:
   # ---------------------------------------------------------------------------
   # Orderer
   # ---------------------------------------------------------------------------
-  - Name: OrdererOrg
+  - Name: Orderer
     Domain: exciteph.com
     Specs:
-      - Hostname: ordererorg
+      - Hostname: orderer
 PeerOrgs:
   # ---------------------------------------------------------------------------
   # Peers
