--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,69 +6,85 @@
 version: '2'
 
 networks:
-  basic: 
+  default: 
 
 services:
-  ca.hf.excite.ph:
+  # Certificate Authority
+  ca.org1.hf.excite.ph:
     image: hyperledger/fabric-ca
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca.hf.excite.ph
       - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org1.hf.excite.ph-cert.pem
-      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/e02e094e000d6239c78613077b6f716524624094fe3289c8a6af74c64e5a5e63_sk
+      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/e18ac7f58eafb2a82dd2a4ff4f89900f26b47bfa16a2bc071679d951702e5b87_sk
+      - FABRIC_CA_SERVER_TLS_ENABLED=true
+      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org1.hf.excite.ph-cert.pem
+      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/e18ac7f58eafb2a82dd2a4ff4f89900f26b47bfa16a2bc071679d951702e5b87_sk
     ports:
       - "7054:7054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
       - ./fixtures/crypto-config/peerOrganizations/org1.hf.excite.ph/ca/:/etc/hyperledger/fabric-ca-server-config
-    container_name: ca.hf.excite.ph
+    container_name: ca.org1.hf.excite.ph
     networks:
-      - basic
-
+      default:
+        aliases:
+          - ca.org1.hf.excite.ph
+  # Orderer
   orderer.hf.excite.ph:
     container_name: orderer.hf.excite.ph
     image: hyperledger/fabric-orderer
     environment:
       - ORDERER_GENERAL_LOGLEVEL=debug
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
+      - ORDERER_GENERAL_LISTENPORT=7050
+      - ORDERER_GENERAL_GENESISPROFILE=Points
       - ORDERER_GENERAL_GENESISMETHOD=file
-      - ORDERER_GENERAL_GENESISFILE=/etc/hyperledger/configtx/genesis.block
-      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
-      - ORDERER_GENERAL_LOCALMSPDIR=/etc/hyperledger/msp/orderer/msp
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/orderer
+      - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/genesis.block
+      - ORDERER_GENERAL_LOCALMSPID=hf.chainhero.io
+      - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
+      - ORDERER_GENERAL_TLS_ENABLED=true
+      - ORDERER_GENERAL_TLS_PRIVATEKEY=/var/hyperledger/orderer/tls/server.key
+      - ORDERER_GENERAL_TLS_CERTIFICATE=/var/hyperledger/orderer/tls/server.crt
+      - ORDERER_GENERAL_TLS_ROOTCAS=[/var/hyperledger/orderer/tls/ca.crt]
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric
     command: orderer
     ports:
       - 7050:7050
     volumes:
-        - ./fixtures/artifacts/:/etc/hyperledger/configtx
-        - ./fixtures/crypto-config/ordererOrganizations/hf.excite.ph/orderers/orderer.hf.excite.ph/:/etc/hyperledger/msp/orderer
-        - ./fixtures/crypto-config/peerOrganizations/org1.hf.excite.ph/peers/peer0.org1.hf.excite.ph/:/etc/hyperledger/msp/peerOrg1
+        - ./fixtures/artifacts/genesis.block:/var/hyperledger/orderer/genesis.block
+        - ./fixtures/crypto-config/ordererOrganizations/hf.excite.ph/orderers/orderer.hf.excite.ph/msp:/var/hyperledger/orderer/msp
+        - ./fixtures/crypto-config/ordererOrganizations/hf.excite.ph/orderers/orderer.hf.excite.ph/tls:/var/hyperledger/orderer/tls
     networks:
-      - basic
-
+      default:
+        aliases:
+          - orderer.hf.excite.ph
+  # Peers
   peer0.org1.hf.excite.ph:
     container_name: peer0.org1.hf.excite.ph
     image: hyperledger/fabric-peer
     environment:
-      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_PEER_ID=peer0.org1.hf.excite.ph
-      - CORE_LOGGING_PEER=debug
       - CORE_CHAINCODE_LOGGING_LEVEL=DEBUG
-      - CORE_PEER_LOCALMSPID=Org1MSP
-      - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp/peer/
+      - CORE_LOGGING_PEER=DEBUG
       - CORE_PEER_ADDRESS=peer0.org1.hf.excite.ph:7051
-      # # the following setting starts chaincode containers on the same
-      # # bridge network as the peers
-      # # https://docs.docker.com/compose/networking/
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=thanksapp_basic
-      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb:5984
-      # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
-      # provide the credentials for ledger to connect to CouchDB.  The username and password must
-      # match the username and password set for the associated CouchDB.
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric
+      - CORE_PEER_ADDRESSAUTODETECT=true
+      - CORE_PEER_ID=peer0.org1.hf.excite.ph
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.hf.excite.ph:7051
+      - CORE_PEER_GOSSIP_USELEADERELECTION=true
+      - CORE_PEER_GOSSIP_ORGLEADER=false
+      - CORE_PEER_GOSSIP_SKIPHANDSHAKE=true
+      - CORE_PEER_LOCALMSPID=org1.hf.excite.ph
+      - CORE_PEER_MSPCONFIGPATH=/var/hyperledger/msp
+      - CORE_PEER_NETWORKID=thanksapp
+      - CORE_PEER_PROFILE_ENABLED=true
+      - CORE_PEER_TLS_ENABLED=true
+      - CORE_PEER_TLS_CERT_FILE=/var/hyperledger/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/var/hyperledger/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/var/hyperledger/tls/ca.crt
+      - CORE_PEER_TLS_SERVERHOSTOVERRIDE=peer0.org1.hf.excite.ph
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - CORE_VM_DOCKER_ATTACHSTDOUT=true
+    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: peer node start
     # command: peer node start --peer-chaincodedev=true
     ports:
@@ -76,50 +92,13 @@ services:
       - 7053:7053
     volumes:
         - /var/run/:/host/var/run/
-        - ./fixtures/crypto-config/peerOrganizations/org1.hf.excite.ph/peers/peer0.org1.hf.excite.ph/msp:/etc/hyperledger/msp/peer
-        - ./fixtures/crypto-config/peerOrganizations/org1.hf.excite.ph/users:/etc/hyperledger/msp/users
-        - ./fixtures/artifacts/:/etc/hyperledger/configtx
+        - ./fixtures/crypto-config/peerOrganizations/org1.hf.excite.ph/peers/peer0.org1.hf.excite.ph/msp:/var/hyperledger/msp
+        - ./fixtures/crypto-config/peerOrganizations/org1.hf.excite.ph/peers/peer0.org1.hf.excite.ph/tls:/var/hyperledger/tls
     depends_on:
       - orderer.hf.excite.ph
-      - couchdb
+    links:
+      - orderer.hf.excite.ph
     networks:
-      - basic
-
-  couchdb:
-    container_name: couchdb
-    image: hyperledger/fabric-couchdb
-    # Populate the COUCHDB_USER and COUCHDB_PASSWORD to set an admin user and password
-    # for CouchDB.  This will prevent CouchDB from operating in an "Admin Party" mode.
-    environment:
-      - COUCHDB_USER=
-      - COUCHDB_PASSWORD=
-    ports:
-      - 5984:5984
-    networks:
-      - basic
-
-  cli:
-    container_name: cli
-    image: hyperledger/fabric-tools
-    tty: true
-    environment:
-      - GOPATH=/opt/gopath
-      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
-      - CORE_LOGGING_LEVEL=DEBUG
-      - CORE_PEER_ID=cli
-      - CORE_PEER_ADDRESS=peer0.org1.hf.excite.ph:7051
-      - CORE_PEER_LOCALMSPID=Org1MSP
-      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.hf.excite.ph/users/Admin@org1.hf.excite.ph/msp
-      - CORE_CHAINCODE_KEEPALIVE=10
-    working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
-    command: /bin/bash
-    volumes:
-        - /var/run/:/host/var/run/
-        - ./chaincode/:/opt/gopath/src/github.com/
-        - ./fixtures/crypto-config/:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
-    networks:
-        - basic
-    #depends_on:
-    #  - orderer.example.com
-    #  - peer0.org1.example.com
-    #  - couchdb
+      default:
+        aliases:
+          - peer0.org1.hf.excite.ph
