--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,5 +1,9 @@
-ignored = ["github.com/thanksapp/chaincode"]
+ignored = ["github.com/thanksapp/chaincode", "github.com/milagro-crypto/amcl*"]
 
 [[constraint]]
   name = "github.com/hyperledger/fabric-sdk-go"
   revision = "a906355f73d060d7bf95874a9e90dc17589edbb3"
+
+[[constraint]]
+  name = "github.com/pkg/errors"
+  branch = "master"
